CS-B gets its own module