@@ -1,6 +1,21 @@
+/*
+ * Copyright 2022 Red Hat, Inc. and/or its affiliates.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
 package org.optaplanner.constraint.streams;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Stream;
 
@@ -34,28 +49,20 @@ public class ConstraintStreamTestExtension implements TestTemplateInvocationCont
     @Override
     public Stream<TestTemplateInvocationContext> provideTestTemplateInvocationContexts(ExtensionContext context) {
         return Stream.of(true, false)
-                .flatMap(constraintMatchEnabled -> Arrays.stream(ConstraintStreamImplType.values())
-                        .map(constraintStreamImplType -> invocationContext(
-                                constraintMatchEnabled,
-                                constraintStreamImplType)));
+                .map(ConstraintStreamTestExtension::invocationContext);
     }
 
-    private static TestTemplateInvocationContext invocationContext(
-            Boolean constraintMatchEnabled,
-            ConstraintStreamImplType constraintStreamImplType) {
+    private static TestTemplateInvocationContext invocationContext(Boolean constraintMatchEnabled) {
         return new TestTemplateInvocationContext() {
 
             @Override
             public String getDisplayName(int invocationIndex) {
-                return "constraintMatchEnabled=" + constraintMatchEnabled
-                        + ", constraintStreamImplType=" + constraintStreamImplType;
+                return "constraintMatchEnabled=" + constraintMatchEnabled;
             }
 
             @Override
             public List<Extension> getAdditionalExtensions() {
-                return Arrays.asList(
-                        parameterResolver(boolean.class, constraintMatchEnabled),
-                        parameterResolver(ConstraintStreamImplType.class, constraintStreamImplType));
+                return List.of(parameterResolver(boolean.class, constraintMatchEnabled));
             }
         };
     }
